--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "jinam@rndit.net"
+      url: "mailto:jinam@rndit.net"
     #- label: "Website"
     #  icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
